syntax = "proto3";
option go_package = "powerit/proto";
package proto;

import "users.proto";

message Empty {}

message Id {
    string id = 1;
}

message Count {
    int64 count = 1;
}

message AuthResponse {
    string token = 1;
    User user = 2;
}

message StripeUrlResponse {
    string url = 1;
}

service UsersService {
    rpc CreateUser(Empty) returns (Id) {}
    rpc Auth(Empty) returns (AuthResponse) {}

    rpc CreateStripeCheckout(Empty) returns (StripeUrlResponse) {}
    rpc CreateStripePortal(Empty) returns (StripeUrlResponse) {}
}
