syntax = "proto3";
option go_package = "powerit/proto";
package proto;

message Profile {
    string id = 1;
    string created = 2;
    string updated = 3;
    string user_id = 4;
    string active = 5;
    string username = 6;
    string about = 7;
    string first_name = 8;
    string last_name = 9;
    string email = 10;
    string country = 11;
    string street_address = 12;
    string city = 13;
    string state = 14;
    string zip = 15;
    repeated string email_notifications = 16;
    string push_notification = 17;
    string resume = 18;
    string cover = 19;
    string position = 20;
    string skills = 21;
}
